fix styling of images wrapped in frame

--- a/style.css
+++ b/style.css
@@ -156,8 +156,6 @@ strong{
 img{
     position:relative;
     margin:0 auto;
-    padding:5px;
-    margin:5px 0 0 0;
  }
 img.wrapped_in_img_container {
 	margin: 0;
